--- a/style/homePageStyle.css
+++ b/style/homePageStyle.css
@@ -1,55 +1,69 @@
-/* Resetowanie domyślnych stylów dla elementów */
-body, html {
-     
-     align-items: center;
-     display: flex;
-     flex-direction: column;
-     
+body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  /* background-color: #007bff; */
+  background-image: url(/image/homeImage/pexels-freenwrld-1587267.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 
-     padding: 0;
-     font-family: Arial, sans-serif;
-   }
+  background-size: cover;
+}
 
+#displayCarts {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 10px;
+  column-gap: 10px;
   
-   .carCart {
-     width: 550px;
-     height: 160px;
-     display: flex;
-     justify-content: space-between;
-     
-     align-items:center;
+  /* border: 2px solid black; */
+}
 
-     margin:20px 0px  ;
-     border: 1px solid #ccc;
-     border-radius: 5px;
-     padding: 20px;
-   }
-   
-   .carImage {
-     width: 200px;
-     height: 156px;
-     
-   }
-   
-   .carInfo {
-     text-align: center;
-   }
-   
-   .carInfo p {
-     margin: 5px 0;
-   }
-   
-   .btnBuyCar {
-     background-color: #007bff;
-     color: #fff;
-     border: none;
-     border-radius: 5px;
-     padding: 10px 20px;
-     cursor: pointer;
-     transition: background-color 0.3s ease;
-   }
-   
-   .btnBuyCar:hover {
-     background-color: #0056b3;
-   }
-   
+.carCart {
+  width: 550px;
+  height: 160px;
+  display: flex;
+  justify-content: space-between;
+  background-color:rgb(170, 157, 157);
+  align-items: center;
+
+  margin: 10px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.carImage {
+  width: 200px;
+  height: 156px;
+}
+
+.carInfo {
+  text-align: center;
+}
+
+.carInfo p {
+  margin: 5px 0;
+}
+
+.btnBuyCar {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btnBuyCar:hover {
+  background-color: #0056b3;
+}
+
+
+
+
