--- a/style/homePageStyle.css
+++ b/style/homePageStyle.css
@@ -4,12 +4,25 @@ body {
   flex-direction: column;
   padding: 0;
   font-family: Arial, sans-serif;
-  /* background-color: #007bff; */
+  
   background-image: url(/image/homeImage/pexels-freenwrld-1587267.jpg);
   background-repeat: no-repeat;
   background-position: center;
 
   background-size: cover;
+}
+
+.welcome{
+  text-align: center;
+  margin-top: 20px;
+  font-size: 3em;
+  color: rgb(56, 36, 36);
+}
+.welcomeSection{
+   width: 90%; 
+   border-radius: 12px;
+   backdrop-filter: blur(5px);
+   background-color: rgba(255, 255, 255, 0.5);
 }
 
 #displayCarts {
