--- a/style/homePageStyle.css
+++ b/style/homePageStyle.css
@@ -4,26 +4,24 @@ body {
   flex-direction: column;
   padding: 0;
   font-family: Arial, sans-serif;
-  
   background-image: url(/image/homeImage/pexels-freenwrld-1587267.jpg);
   background-repeat: no-repeat;
   background-position: center;
-
   background-size: cover;
 }
-
-.welcome{
+.welcomeSection {
+  width: 90%;
+  border-radius: 12px;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.welcome {
   text-align: center;
   margin-top: 20px;
   font-size: 3em;
   color: rgb(56, 36, 36);
 }
-.welcomeSection{
-   width: 90%; 
-   border-radius: 12px;
-   backdrop-filter: blur(5px);
-   background-color: rgba(255, 255, 255, 0.5);
-}
+
 
 #displayCarts {
   width: 100%;
@@ -32,8 +30,6 @@ body {
   justify-content: center;
   row-gap: 10px;
   column-gap: 10px;
-  
-  /* border: 2px solid black; */
 }
 
 .carCart {
@@ -41,9 +37,8 @@ body {
   height: 160px;
   display: flex;
   justify-content: space-between;
-  background-color:rgb(170, 157, 157);
+  background-color: rgb(170, 157, 157);
   align-items: center;
-
   margin: 10px 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -65,7 +60,7 @@ body {
 
 .btnBuyCar {
   background-color: #007bff;
-  color: #fff;
+  color: black;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
@@ -76,7 +71,3 @@ body {
 .btnBuyCar:hover {
   background-color: #0056b3;
 }
-
-
-
-
